# SPECFEM-X

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO  parallel
doc/: CMakeLists.txt  acknowledgements.tex  authors.tex  chap1_introduction.tex  chap2_getting_started.tex  chap3_input.tex  chap4_output_and_visualization.tex  chap5_utilities.tex  compile_LaTeX_manual.sh  licensing.tex  manual_SPECFEMX.tex
input/: brick.psem  brick_for_cmt_implementation_large.psem  brick_for_cmt_implementation_small.psem  brick_for_cmt_implementation_small_shared.sem  coarse_okada_check.psem  ctape_homo_coarse.psem  ctape_homo_coarse.sem  ctape_homo_medium.psem  cylinder.sem  cylinder0h2.sem  cylinder0h5.sem  cylinder0h5c.sem  cylinder1.sem  cylinder40cm.sem  cylinder40cmErrf_torsion.sem  cylinderL1.sem  doubling_layer_fault.psem  doubling_layer_fault.sem  elastic.sem  elastic_rod8mm_test.sem  example1.psem  example1_nowater.psem  example1_nowater.sem  example2.psem  example2_left_fixed.psem  example_viscoelas0.sem  example_viscoelas0_bcu.sem  excavation_mine.psem  excavation_minem.psem  fault.psem  fault.sem  fault2.sem  fault_not_moved.psem  fault_slip.sem  fault_slip_nobcu.sem  faultnew.sem  gravity_test.psem  gravity_test1.psem  gravity_test_cmt.psem  gravity_test_nsplit.psem  (+286 more)
src/: CMakeLists.txt  GPU.cu  GPU.h  GPU_broken_loop.cu  GPU_stubs.c  Makefile  apply_bc.f90  apply_mtraction.f90  apply_traction.f90  benchmark.F90  cmtsolution.F90  compute_pressure.f90  degrees_of_freedom.f90  degrees_of_freedom.f90.orig  earthquake_load.F90  elastic.f90  element.f90  fault.f90  free_surface.f90  ghost_library_mpi.f90  gindex.f90  gll_library.f90  global.f90  helper_functions.cu  infinite_element.f90  infinite_layer.f90  initialize_cuda.cu  integration.f90  map_location.f90  math_library.f90  math_library_mpi.f90  math_library_serial.f90  mesh_spec.f90  model.F90  mpi_library.f90  okada_solution.f90  package_version.f90  parsolver.f90  parsolver_petsc.F90  partmesh.f90  (+25 more)
util/: CMakeLists.txt  exodus2mesh  exodus2mesh.c  trelis2mesh.c
